style: fixed grid rooms slight unbalanced size

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -75,16 +75,6 @@ h2 {
     margin-bottom: 0.5%;
 } */
 
-.room:not(#room-1):not(#room-4) {
-    width: 95%;
-    margin-left: 3%;
-}
-
-.passage:not(#passage-2) {
-    width: 96%;
-    margin-left: 3%;
-}
-
 #room-1 {
     grid-area: room-1;
     background-color: rgba(0, 128, 0, 0.697);
@@ -104,7 +94,7 @@ h2 {
 #room-4 {
     grid-area: room-4;
     background-color: rgba(137, 43, 226, 0.697);
-    margin-top: 1%;
+    margin-top: 1.5%;
     width: 98.5%;
     height: 97.5%;
 }
@@ -112,17 +102,22 @@ h2 {
     grid-area: room-5;
     background-color: rgba(0, 128, 0, 0.697);
 
-    width: 94% !important;
-    margin-left: 4% !important;
+    width: 94%;
+    margin-left: 4%;
 }
 #room-6 {
     grid-area: room-6;
     background-color: rgba(137, 43, 226, 0.697);
+
+    height: 99%;
 }
 
 #passage-1 {
     grid-area: passage-1;
     background-color: rgba(255, 217, 0, 0.697);
+
+    height: 107%;
+    width: 96%;
 }
 #passage-2 {
     grid-area: passage-2;
@@ -137,12 +132,28 @@ h2 {
     grid-area: passage-3;
     background-color: rgba(255, 217, 0, 0.697);
 
-    width: 97% !important;
+    margin-top: -6%;
+    width: 97%;
 }
 
-#passage-3,
+#room-2,
+#room-3 {
+    width: 95%;
+    margin-left: 3%;
+    height: 101%;
+}
+
 #room-5,
 #room-6 {
-    height: 98%;
     margin-top: -0.5%;
+}
+
+#room-3,
+#room-6 {
+    margin-left: 2%;
+    width: 96%;
+}
+
+.passage:not(#passage-2) {
+    margin-left: 3%;
 }
