--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,6 +7,12 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-blue-300: oklch(80.9% 0.105 251.813);
+    --color-blue-500: oklch(62.3% 0.214 259.815);
+    --color-gray-50: oklch(98.5% 0.002 247.839);
+    --color-gray-200: oklch(92.8% 0.006 264.531);
+    --color-gray-300: oklch(87.2% 0.01 258.338);
+    --color-gray-900: oklch(21% 0.034 264.665);
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-md: 28rem;
@@ -15,6 +21,7 @@
     --text-lg: 1.125rem;
     --text-lg--line-height: calc(1.75 / 1.125);
     --font-weight-medium: 500;
+    --radius-lg: 0.5rem;
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
   }
@@ -168,6 +175,9 @@
   }
 }
 @layer utilities {
+  .\@container {
+    container-type: inline-size;
+  }
   .sr-only {
     position: absolute;
     width: 1px;
@@ -188,6 +198,9 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
+  .top-1 {
+    top: calc(var(--spacing) * 1);
+  }
   .right-0 {
     right: calc(var(--spacing) * 0);
   }
@@ -196,6 +209,9 @@
   }
   .z-50 {
     z-index: 50;
+  }
+  .col-span-1 {
+    grid-column: span 1 / span 1;
   }
   .col-span-2 {
     grid-column: span 2 / span 2;
@@ -239,6 +255,12 @@
   .me-1\.5 {
     margin-inline-end: calc(var(--spacing) * 1.5);
   }
+  .-mt-1 {
+    margin-top: calc(var(--spacing) * -1);
+  }
+  .mt-4 {
+    margin-top: calc(var(--spacing) * 4);
+  }
   .mt-\[0\.5\%\] {
     margin-top: 0.5%;
   }
@@ -250,6 +272,12 @@
   }
   .mb-2\.5 {
     margin-bottom: calc(var(--spacing) * 2.5);
+  }
+  .mb-4 {
+    margin-bottom: calc(var(--spacing) * 4);
+  }
+  .ml-2 {
+    margin-left: calc(var(--spacing) * 2);
   }
   .box-border {
     box-sizing: border-box;
@@ -275,11 +303,17 @@
   .aspect-430\/243 {
     aspect-ratio: 430/243;
   }
+  .h-3 {
+    height: calc(var(--spacing) * 3);
+  }
   .h-4 {
     height: calc(var(--spacing) * 4);
   }
   .h-5 {
     height: calc(var(--spacing) * 5);
+  }
+  .h-8 {
+    height: calc(var(--spacing) * 8);
   }
   .h-9 {
     height: calc(var(--spacing) * 9);
@@ -299,14 +333,23 @@
   .min-h-\[300px\] {
     min-height: 300px;
   }
+  .w-3 {
+    width: calc(var(--spacing) * 3);
+  }
   .w-4 {
     width: calc(var(--spacing) * 4);
   }
   .w-5 {
     width: calc(var(--spacing) * 5);
   }
+  .w-8 {
+    width: calc(var(--spacing) * 8);
+  }
   .w-9 {
     width: calc(var(--spacing) * 9);
+  }
+  .w-\[80\%\] {
+    width: 80%;
   }
   .w-full {
     width: 100%;
@@ -344,6 +387,12 @@
   .justify-center {
     justify-content: center;
   }
+  .justify-end {
+    justify-content: flex-end;
+  }
+  .gap-1 {
+    gap: calc(var(--spacing) * 1);
+  }
   .gap-4 {
     gap: calc(var(--spacing) * 4);
   }
@@ -369,6 +418,13 @@
   .rounded-\(--b-r\) {
     border-radius: var(--b-r);
   }
+  .rounded-lg {
+    border-radius: var(--radius-lg);
+  }
+  .rounded-t {
+    border-top-left-radius: 0.25rem;
+    border-top-right-radius: 0.25rem;
+  }
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
@@ -381,6 +437,12 @@
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 1px;
   }
+  .border-gray-200 {
+    border-color: var(--color-gray-200);
+  }
+  .border-gray-300 {
+    border-color: var(--color-gray-300);
+  }
   .border-transparent {
     border-color: transparent;
   }
@@ -390,14 +452,38 @@
   .bg-\(--bg-secondary-clr\) {
     background-color: var(--bg-secondary-clr);
   }
+  .bg-\[color-mix\(in_oklab\,var\(--accent-clr\)_10\%\,transparent_90\%\)\] {
+    background-color: var(--accent-clr);
+    @supports (color: color-mix(in lab, red, red)) {
+      background-color: color-mix(in oklab,var(--accent-clr) 10%,transparent 90%);
+    }
+  }
+  .bg-\[rgba\(0\,0\,0\,0\.6\)\] {
+    background-color: rgba(0,0,0,0.6);
+  }
+  .bg-gray-50 {
+    background-color: var(--color-gray-50);
+  }
   .bg-transparent {
     background-color: transparent;
+  }
+  .bg-white {
+    background-color: var(--color-white);
   }
   .p-\(--padding-bigger\) {
     padding: var(--padding-bigger);
   }
+  .p-\(--padding-exp\) {
+    padding: var(--padding-exp);
+  }
   .p-\(--padding-g\) {
     padding: var(--padding-g);
+  }
+  .p-2 {
+    padding: calc(var(--spacing) * 2);
+  }
+  .p-2\.5 {
+    padding: calc(var(--spacing) * 2.5);
   }
   .p-3 {
     padding: calc(var(--spacing) * 3);
@@ -429,6 +515,9 @@
   .pb-4 {
     padding-bottom: calc(var(--spacing) * 4);
   }
+  .text-center {
+    text-align: center;
+  }
   .text-lg {
     font-size: var(--text-lg);
     line-height: var(--tw-leading, var(--text-lg--line-height));
@@ -444,6 +533,12 @@
   .font-medium {
     --tw-font-weight: var(--font-weight-medium);
     font-weight: var(--font-weight-medium);
+  }
+  .text-\(--accent-clr\) {
+    color: var(--accent-clr);
+  }
+  .text-gray-900 {
+    color: var(--color-gray-900);
   }
   .text-white {
     color: var(--color-white);
@@ -463,10 +558,39 @@
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
   }
+  .hover\:bg-gray-200 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-gray-200);
+      }
+    }
+  }
+  .hover\:text-gray-900 {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--color-gray-900);
+      }
+    }
+  }
+  .focus\:border-blue-500 {
+    &:focus {
+      border-color: var(--color-blue-500);
+    }
+  }
   .focus\:ring-4 {
     &:focus {
       --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentcolor);
       box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+    }
+  }
+  .focus\:ring-blue-300 {
+    &:focus {
+      --tw-ring-color: var(--color-blue-300);
+    }
+  }
+  .focus\:ring-blue-500 {
+    &:focus {
+      --tw-ring-color: var(--color-blue-500);
     }
   }
   .focus\:outline-none {
@@ -483,6 +607,11 @@
   .md\:inset-0 {
     @media (width >= 48rem) {
       inset: calc(var(--spacing) * 0);
+    }
+  }
+  .md\:p-5 {
+    @media (width >= 48rem) {
+      padding: calc(var(--spacing) * 5);
     }
   }
   .md\:p-6 {
@@ -503,6 +632,11 @@
   .md\:pb-5 {
     @media (width >= 48rem) {
       padding-bottom: calc(var(--spacing) * 5);
+    }
+  }
+  .\@min-\[50rem\]\:col-span-2 {
+    @container (width >= 50rem) {
+      grid-column: span 2 / span 2;
     }
   }
 }
@@ -530,6 +664,7 @@
   --fw-text: 400;
   --padding-g: 12px;
   --padding-bigger: 12px 22px;
+  --padding-exp: 22px 12px;
   --gap: 5rem;
   --b-r: 12px;
 }
@@ -543,16 +678,11 @@ h2 {
   font-size: var(--fs-h2);
 }
 .btn {
+  aspect-ratio: auto;
   cursor: pointer;
   border-radius: var(--b-r);
   --tw-font-weight: var(--fw-btn);
   font-weight: var(--fw-btn);
-  &:hover {
-    @media (hover: hover) {
-      border-style: var(--tw-border-style);
-      border-width: 2px;
-    }
-  }
   &:hover {
     @media (hover: hover) {
       background-color: transparent;
@@ -570,17 +700,18 @@ h2 {
   color: var(--bg-primary-clr);
   &:hover {
     @media (hover: hover) {
-      border-color: var(--primary-clr);
-    }
-  }
-  &:hover {
-    @media (hover: hover) {
       background-color: var(--bg-primary-clr);
     }
   }
   &:hover {
     @media (hover: hover) {
       color: var(--primary-clr);
+    }
+  }
+  &:hover {
+    @media (hover: hover) {
+      --tw-shadow: 0 0 0 2px inset var(--tw-shadow-color, var(--primary-clr));
+      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
     }
   }
   background: var(--grad-blue-to-dark-clr);
@@ -596,6 +727,38 @@ h2 {
     }
   }
 }
+.btn--modal {
+  height: 3rem;
+  width: fit-content;
+  padding-inline: calc(var(--spacing) * 5);
+  font-size: var(--fs-text);
+}
+.btn--secondary {
+  color: var(--accent-clr);
+  --tw-shadow: 0 0 0 2px inset var(--tw-shadow-color, var(--accent-clr));
+  box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  &:hover {
+    @media (hover: hover) {
+      background-color: var(--accent-clr);
+    }
+  }
+  &:hover {
+    @media (hover: hover) {
+      color: var(--bg-primary-clr);
+    }
+  }
+}
+.btn--exp {
+  background-color: var(--secondary-clr);
+  color: var(--bg-primary-clr);
+  --tw-shadow: 0 0 0 2px inset var(--tw-shadow-color, var(--secondary-clr));
+  box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  &:hover {
+    @media (hover: hover) {
+      color: var(--secondary-clr);
+    }
+  }
+}
 .center {
   background: url("../images/workers-studio-87kb.webp") no-repeat center/contain;
 }
@@ -605,6 +768,7 @@ h2 {
   grid-template-areas: "room-1 room-1 passage-1 room-2 room-3" "room-4 room-4 passage-2 passage-2 passage-2" "room-4 room-4 passage-3 room-5 room-6";
 }
 .room {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -620,7 +784,8 @@ h2 {
   font-size: 1vw;
 }
 .room button {
-  margin-top: auto;
+  position: absolute;
+  bottom: 5%;
 }
 #room-1 {
   grid-area: room-1;
@@ -679,6 +844,23 @@ h2 {
 }
 .passage:not(#passage-2) {
   margin-left: 3%;
+}
+label {
+  margin-bottom: calc(var(--spacing) * 2);
+  display: block;
+  --tw-font-weight: var(--fw-label);
+  font-weight: var(--fw-label);
+  color: var(--accent-clr);
+}
+.img {
+  aspect-ratio: 1 / 1;
+  border-radius: 50%;
+  border-style: var(--tw-border-style);
+  border-width: 2px;
+}
+.img--modal {
+  height: 8rem;
+  border-color: var(--accent-clr);
 }
 @property --tw-space-x-reverse {
   syntax: "*";
