--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -49,7 +49,7 @@ h3 {
 }
 
 .btn {
-    @apply rounded-(--b-r) cursor-pointer hover:bg-none hover:bg-transparent font-(--fw-btn) aspect-auto;
+    @apply rounded-(--b-r) cursor-pointer hover:bg-none hover:bg-transparent font-(--fw-btn) aspect-auto items-center justify-center;
     font-size: var(--fs-btn-lg);
 }
 
@@ -59,7 +59,11 @@ h3 {
 }
 
 .btn--small {
-    @apply text-(--bg-primary-clr) bg-(--primary-clr) aspect-square w-12  hover:bg-(--dark-blue-clr);
+    @apply text-(--bg-primary-clr) bg-(--primary-clr) aspect-square max-h-[4vw] inline-flex hover:bg-(--dark-blue-clr);
+}
+
+.btn--xroom {
+    @apply bg-red-500 min-w-8 max-w-8 hover:bg-red-700;
 }
 
 .btn--modal {
@@ -93,17 +97,17 @@ h3 {
 }
 
 .room {
-    @apply flex flex-col items-center pb-3 relative;
+    @apply flex flex-col items-center justify-center relative;
 }
 
-.room span {
-    @apply font-(--fw-label) text-(--bold-text-clr) relative top-[40%] text-shadow-[0_0_4px_var(--bg-secondary-clr)];
+.room > span {
+    @apply font-(--fw-label) text-(--bold-text-clr) -mt-[5%] text-shadow-[0_0_4px_var(--bg-secondary-clr)];
     /* font-size: var(--fs-text); */
     font-size: 1vw;
 }
 
-.room button {
-    @apply absolute bottom-[5%];
+.room > button {
+    /* @apply absolute bottom-[5%]; */
 }
 
 /* .passage {
@@ -197,6 +201,23 @@ h3 {
 
 .passage:not(#passage-2) {
     margin-left: 3%;
+}
+
+.assigned-workers {
+    @apply overflow-y-auto flex gap-2 max-w-[80%];
+}
+
+.assigned-workers::-webkit-scrollbar {
+    @apply bg-transparent w-0 h-0;
+}
+
+.assigned-worker {
+    @apply py-2 px-1 flex justify-center items-center rounded-(--b-r) gap-3 bg-[color-mix(in_oklab,var(--accent-clr)_40%,white_60%)] max-w-[7.3rem] w-full;
+}
+
+.assigned-worker h3 {
+    @apply max-w-1/2;
+    font-size: smaller !important;
 }
 
 /* customize flowbite modal */
