--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -364,6 +364,9 @@
   .cursor-pointer {
     cursor: pointer;
   }
+  .resize {
+    resize: both;
+  }
   .grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -748,45 +751,37 @@ h3 {
 #room-1 {
   grid-area: room-1;
   height: 96%;
-  background-color: rgba(0,255,255,0.6);
 }
 #room-2 {
   grid-area: room-2;
-  background-color: rgba(137,43,226,0.6);
 }
 #room-3 {
   grid-area: room-3;
-  background-color: rgba(0,255,255,0.6);
 }
 #room-4 {
   grid-area: room-4;
-  background-color: rgba(137,43,226,0.6);
 }
 #room-5 {
   grid-area: room-5;
-  height: 96%;
-  background-color: rgba(0,255,255,0.6);
+  height: 98%;
 }
 #room-6 {
   grid-area: room-6;
-  background-color: rgba(137,43,226,0.6);
+  height: 98%;
 }
 #passage-1 {
   grid-area: passage-1;
   margin-top: 1%;
-  background-color: rgba(165,42,42,0.6);
 }
 #passage-2 {
   grid-area: passage-2;
   margin-top: 2%;
   margin-left: 2%;
   height: 88%;
-  background-color: rgba(255,255,255,0.6);
 }
 #passage-3 {
   grid-area: passage-3;
   margin-top: -6%;
-  background-color: rgba(0,0,255,0.6);
 }
 #passage-1, #passage-3 {
   margin-left: 6.5%;
