--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,6 +10,7 @@
     --color-red-200: oklch(88.5% 0.062 18.334);
     --color-red-500: oklch(63.7% 0.237 25.331);
     --color-red-700: oklch(50.5% 0.213 27.518);
+    --color-amber-300: oklch(87.9% 0.169 91.605);
     --color-green-200: oklch(92.5% 0.084 155.995);
     --color-green-500: oklch(72.3% 0.219 149.579);
     --color-blue-600: oklch(54.6% 0.245 262.881);
@@ -21,6 +22,8 @@
     --spacing: 0.25rem;
     --text-lg: 1.125rem;
     --text-lg--line-height: calc(1.75 / 1.125);
+    --text-xl: 1.25rem;
+    --text-xl--line-height: calc(1.75 / 1.25);
     --font-weight-medium: 500;
     --font-weight-bold: 700;
     --radius-lg: 0.5rem;
@@ -268,9 +271,6 @@
   .ml-2 {
     margin-left: calc(var(--spacing) * 2);
   }
-  .ml-auto {
-    margin-left: auto;
-  }
   .block {
     display: block;
   }
@@ -340,8 +340,8 @@
   .min-w-\[20\.5rem\] {
     min-width: 20.5rem;
   }
-  .min-w-\[249px\] {
-    min-width: 249px;
+  .min-w-\[270px\] {
+    min-width: 270px;
   }
   .min-w-dvw {
     min-width: 100dvw;
@@ -492,6 +492,10 @@
     font-size: var(--text-lg);
     line-height: var(--tw-leading, var(--text-lg--line-height));
   }
+  .text-xl {
+    font-size: var(--text-xl);
+    line-height: var(--tw-leading, var(--text-xl--line-height));
+  }
   .font-\(--fw-h\) {
     --tw-font-weight: var(--fw-h);
     font-weight: var(--fw-h);
@@ -509,9 +513,6 @@
   }
   .text-\(--primary-clr\) {
     color: var(--primary-clr);
-  }
-  .text-\(--secondary-clr\) {
-    color: var(--secondary-clr);
   }
   .text-blue-600 {
     color: var(--color-blue-600);
@@ -564,7 +565,7 @@
 }
 :root {
   --primary-clr: oklch(59.207% 0.21386 257.434);
-  --secondary-clr: oklch(83.854% 0.17086 83.341);
+  --secondary-clr: oklch(72.459% 0.14732 83.356);
   --dark-blue-clr: oklch(47.952% 0.16437 256.113);
   --grad-blue-to-dark-clr: linear-gradient(
         to right,
@@ -657,6 +658,58 @@ h3 {
     }
   }
 }
+.btn--edit {
+  aspect-ratio: auto;
+  border-radius: var(--b-r);
+  background-color: var(--secondary-clr);
+  padding-inline: calc(var(--spacing) * 2);
+  text-shadow: 0px 1px 0px var(--tw-text-shadow-color, rgb(0 0 0 / 0.15));
+  &:hover {
+    @media (hover: hover) {
+      background-color: var(--accent-clr);
+      @supports (color: color-mix(in lab, red, red)) {
+        background-color: color-mix(in oklab,var(--accent-clr) 30%,white 70%);
+      }
+    }
+  }
+  &:hover {
+    @media (hover: hover) {
+      color: var(--secondary-clr);
+    }
+  }
+  &:hover {
+    @media (hover: hover) {
+      --tw-shadow: 0 0 0 2px inset var(--tw-shadow-color, var(--secondary-clr));
+      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+    }
+  }
+}
+.btn--delete {
+  aspect-ratio: auto;
+  border-radius: var(--b-r);
+  background-color: var(--color-red-500);
+  padding-inline: calc(var(--spacing) * 2);
+  text-shadow: 0px 1px 0px var(--tw-text-shadow-color, rgb(0 0 0 / 0.15));
+  &:hover {
+    @media (hover: hover) {
+      background-color: var(--accent-clr);
+      @supports (color: color-mix(in lab, red, red)) {
+        background-color: color-mix(in oklab,var(--accent-clr) 30%,white 70%);
+      }
+    }
+  }
+  &:hover {
+    @media (hover: hover) {
+      color: var(--color-red-500);
+    }
+  }
+  &:hover {
+    @media (hover: hover) {
+      --tw-shadow: 0 0 0 2px inset var(--tw-shadow-color, var(--color-red-500));
+      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+    }
+  }
+}
 .btn--xroom {
   max-width: calc(var(--spacing) * 8);
   min-width: calc(var(--spacing) * 8);
@@ -698,6 +751,21 @@ h3 {
       color: var(--secondary-clr);
     }
   }
+}
+.worker__btns {
+  margin-left: auto;
+  display: flex;
+  height: 100%;
+  min-width: 49px;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: center;
+  gap: calc(var(--spacing) * 5);
+}
+.worker__btns > button {
+  font-size: var(--fs-text);
+  width: 100%;
+  color: var(--bg-primary-clr);
 }
 .center {
   background: url("../images/workers-studio-87kb.webp") no-repeat center/contain;
@@ -858,6 +926,28 @@ label {
 .input--valid {
   border-color: var(--color-green-500);
   background-color: var(--color-green-200);
+}
+article[worker-id] {
+  cursor: pointer;
+  --tw-ring-color: var(--color-amber-300);
+  --tw-ring-inset: inset;
+  &:hover {
+    @media (hover: hover) {
+      background-color: var(--accent-clr);
+      @supports (color: color-mix(in lab, red, red)) {
+        background-color: color-mix(in oklab,var(--accent-clr) 30%,white 70%);
+      }
+    }
+  }
+  &:hover {
+    @media (hover: hover) {
+      --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentcolor);
+      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+    }
+  }
+}
+.close__modal, #close-details-modal {
+  cursor: pointer;
 }
 @property --tw-border-style {
   syntax: "*";
